--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="zh">
 
 <head>
-    <title>吃掉小鹿乃</title>
-    <meta itemprop="name" content="吃掉小鹿乃" />
-    <meta itemprop="description" content="新概念音游" />
+    <title>EatMember</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
     <link href="./static/index.css" rel="stylesheet" type="text/css">
@@ -14,6 +12,33 @@
     <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script>
+        // http://localhost:17007/eat-member/index.html
+        function loadEatData() {
+            let ls = location.search;
+            if (ls.indexOf("?") != -1) {
+                let param = ls.substr(1);
+                if (param.length == 8) {
+                    let t = (new Date()).getTime();
+                    let url = `/api/eat-member/${param}.json?t=${t}`;
+                    let xhr = new XMLHttpRequest();
+                    xhr.open("GET", url, false);
+                    xhr.send();
+                    console.log(xhr);
+                    if (xhr.status === 200) {
+                        let eatData = JSON.parse(xhr.responseText);
+                        document.write(`<style>.t1,.t2,.t3,.t4,.t5{background-image: url("${eatData.imgUrl}");}</style>`);
+                        document.title = `吃掉${eatData.name}`;
+                        return;
+                    }
+                }
+            }
+            alert('哎呀,参数找不到了呢~');
+            window.close();
+            window.location.href = "about:blank";
+        }
+        loadEatData();
+    </script>
 </head>
 
 <body onLoad="init()" oncontextmenu=self.event.returnValue=false>
@@ -57,17 +82,7 @@
             </div>
             <div id="setting" style="display: none;">
                 <div class="container mb-3">
-                    <input type="button" class="btn btn-secondary btn-lg" onclick="getClickBeforeImage()" value="点击前图" style="left: 0">
-                    <input type="file" id="click-before-image" accept="image/*" style="display: none;" onchange="saveClickBeforeImage()">
-                    <input type="button" class="btn btn-secondary btn-lg" onclick="getClickAfterImage()" value="点击后图" style="right: 0">
-                    <input type="file" id="click-after-image" accept="image/*" style="display: none;" onchange="saveClickAfterImage()">
                     <input id="sound" type="button" class="btn btn-secondary btn-lg" onclick="changeSoundMode()">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">标题</span>
-                    </div>
-                    <input type="text" id="title" class="form-control" placeholder="吃掉小鹿乃">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
